k8s/rabbitmq-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-stateful
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
       app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13-management
          port:
            - containerPort: 5762
              name: amqp
            - containerPort: 15672
              name: management
            - containerPort: 25672 
              name: erlang-distribution
          volumeMounts:
            - name: rabbitmq-storage
              mountPath: var/lib/rabbitmq
volumes:
  - name: rabbitmq-storage
    PersistentVolumeClaim:
      claimName: rabbitmq-pvc
