k8s/rabbitmq-headless.yaml
apiVersion: v1
kind: Service 
metadata:
  name: rabbitmq-service
spec:
  clusterIP: None
  selector:
    app: rabbitmq-service
  containerPort:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
    - name: erlang-distribution
      port: 25672
      targetPort: 25672
