k8s/verses-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: verses-svc
spec:
  selector:
    app: verses
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
