k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.verses.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: verses-svc
            port:
              number: 80
